# recurrent-neural-network

./: CMakeLists.txt  README.md
src/: rnn.cc  rnn_headers.h  rnn_main.cc  rnn_neuron_functions.cc
